--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "json2csv": "^6.0.0-alpha.2",
+    "node-cron": "^3.0.2",
     "winston": "^3.8.2",
     "xlsx": "^0.18.5"
   }
