--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "csv-parser": "^3.0.0",
+    "csvjson": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "json2csv": "^6.0.0-alpha.2",
+    "jsonlines": "^0.1.1",
     "node-cron": "^3.0.2",
     "winston": "^3.8.2",
     "xlsx": "^0.18.5"
