--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "csv-parser": "^3.0.0",
     "csvjson": "^5.1.0",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.3.0",
+    "exceljs-export": "^1.0.6",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonlines": "^0.1.1",
     "node-cron": "^3.0.2",
